// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AdminPage correctly for projectAdmins 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container page-header__row"
    >
      <h1
        className="page-header__title"
      >
        Admin Center
      </h1>
      <div
        className="page-header__links"
      >
        <Link
          to="/notes"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Notes
          </button>
        </Link>
        <Link
          to="/snippets"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Snippets
          </button>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="content-container"
  >
    <Connect(AddAdmins) />
    <Connect(AddTeam) />
    <Connect(AddMembers) />
  </div>
</div>
`;

exports[`renders AdminPage correctly for projectAdmins with no teams 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container page-header__row"
    >
      <h1
        className="page-header__title"
      >
        Admin Center
      </h1>
      <div
        className="page-header__links"
      >
        <Link
          to="/notes"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Notes
          </button>
        </Link>
        <Link
          to="/snippets"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Snippets
          </button>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="content-container"
  >
    <Connect(AddAdmins) />
    <Connect(AddTeam) />
  </div>
</div>
`;

exports[`renders AdminPage correctly for superAdmins 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container page-header__row"
    >
      <h1
        className="page-header__title"
      >
        Admin Center
      </h1>
      <div
        className="page-header__links"
      >
        <Link
          to="/notes"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Notes
          </button>
        </Link>
        <Link
          to="/snippets"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Snippets
          </button>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="content-container"
  >
    <Connect(AddProject) />
    <Connect(AddAdmins) />
    <Connect(AddTeam) />
    <Connect(AddMembers) />
  </div>
</div>
`;

exports[`renders AdminPage correctly for superAdmins with no projects 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container page-header__row"
    >
      <h1
        className="page-header__title"
      >
        Admin Center
      </h1>
      <div
        className="page-header__links"
      >
        <Link
          to="/notes"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Notes
          </button>
        </Link>
        <Link
          to="/snippets"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Snippets
          </button>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="content-container"
  >
    <Connect(AddProject) />
  </div>
</div>
`;

exports[`renders AdminPage correctly for superAdmins with no teams 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container page-header__row"
    >
      <h1
        className="page-header__title"
      >
        Admin Center
      </h1>
      <div
        className="page-header__links"
      >
        <Link
          to="/notes"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Notes
          </button>
        </Link>
        <Link
          to="/snippets"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Snippets
          </button>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="content-container"
  >
    <Connect(AddProject) />
    <Connect(AddAdmins) />
    <Connect(AddTeam) />
  </div>
</div>
`;

exports[`renders AdminPage correctly for teamAdmins 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container page-header__row"
    >
      <h1
        className="page-header__title"
      >
        Admin Center
      </h1>
      <div
        className="page-header__links"
      >
        <Link
          to="/notes"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Notes
          </button>
        </Link>
        <Link
          to="/snippets"
        >
          <button
            className="btn btn--tertiary btn--shine"
          >
            Snippets
          </button>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="content-container"
  >
    <Connect(AddMembers) />
  </div>
</div>
`;
